<resources>
    <string name="app_name">Android Practical</string>
    <string name="go_to_ui_widgets">Go To Ui Widgets</string>
    <string name="radio_button">Radio Button</string>
    <string name="this_is_ui_widgets">This is Ui Widgets</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="custom_toast">Custom Toast</string>
    <string name="go_to_form">Go To Form</string>
    <string name="welcome_to_ui_widgets_form">Welcome to UI Widgets Form</string>
    <string name="this_is_switch">This is Switch</string>
    <string name="this_is_toggle">This is Toggle</string>
    <string name="gender">Gender :</string>
    <string name="enter_name">Enter Name</string>
    <string name="submit">Submit</string>
    <string name="this_is_image_button">This is Image Button</string>
    <string name="this_is_a_custom_toast">This is a custom Toast</string>
    <string name="hobbies">Hobbies</string>
    <string name="sports">Sports</string>
    <string name="programming">Programming</string>
    <string name="gaming">Gaming</string>
    <string name="toggle_button_background_white">White Background</string>
    <string name="toggle_button_background_green">Green Background</string>
    <string name="layouts">Layouts</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="feedback_from_title">Enter Feedback details to send to the developer :</string>
    <string name="feedback_name_hint">Enter Name</string>
    <string name="feedback_email_hint">Enter Email</string>
    <string name="feedback_details_hint">Feedback details…</string>
    <string name="feedback_checkbox">Would you like an email response ?</string>
    <string name="feedback_send_btn">Send Feedback</string>
    <string name="table_layout">Table Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="table_layout_title">Collection of Names</string>
    <string name="table_layout_header_first_name">First Name</string>
    <string name="table_layout_header_last_name">Last Name</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="web_view">Web View</string>
    <string name="custom_layout_button_1">Custom Layout Button 1</string>
    <string name="custom_layout_button_2">Custom Layout Button 2</string>
    <string name="framelayout_title">This is FrameLayout</string>
    <string name="framelayout_description">Below Custom Layout is included with two Buttons.</string>
    <string name="webview_enter_url">Enter URL to open site</string>
    <string name="load_site">Load Site</string>
    <string name="table_layout_first_name_jay">Jay</string>
    <string name="table_layout_last_name_modhawadiya">Modhawadiya</string>
    <string name="table_layout_first_name_satish">Satish</string>
    <string name="table_layout_first_name_yagnik">Yagnik</string>
    <string name="table_layout_last_name_bavishi">Bavishi</string>
    <string name="table_layout_first_name_meet">Meet</string>
    <string name="table_layout_last_name_mistry">Mistry</string>
    <string name="activity_name_main_activity">Main Activity</string>
    <string name="spinner_item_ratting_very_bad">Very Bad</string>
    <string name="spinner_item_ratting_bad">Bad</string>
    <string name="spinner_item_ratting_average">Average</string>
    <string name="spinner_item_ratting_good">Good</string>
    <string name="spinner_item_ratting_very_good">Very Good</string>
    <string name="recyclerview_and_adapters">RecyclerView and Adapters</string>
    <string name="recycler_view_and_adapters_listview">ListView</string>
    <string name="recycler_view_and_adapters_recycler_view">Recycler View</string>
    <string name="recycler_view_and_adapters_bottom_navigation_view">Bottom Navigation View</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_favorite">Favorite</string>
    <string name="menu_item_search">Search</string>
    <string name="custom_list_view_item_default_title">OneTwoThree</string>
    <string name="custom_list_view_item_default_description">Description Of Product</string>
    <string name="product_mobile_title">Mobile</string>
    <string name="product_television_title">Television</string>
    <string name="product_computer_title">Computer</string>
    <string name="product_monitor_title">Monitor</string>
    <string name="product_mobile_description">Mobile is a communication device</string>
    <string name="product_telivision_description">Television is for entertainment</string>
    <string name="product_computer_description">Computer is smart device</string>
    <string name="product_monitor_description">Monitor is part of Computer to see visual operation</string>
    <string name="recycler_view_and_adapters_grid_view">Grid View</string>
    <string name="custom_grid_view_item_default_description">This is Description of Product that is going to display here only. Some products may have Description of more than 1 line.</string>
    <string name="custom_grid_view_item_default_title">This is Title</string>
    <string name="recycler_view_and_adapters_tab_layout_and_view_pager">Tab Layout with View Pager</string>
    <string name="movie_captain_america_name">Captain America</string>
    <string name="movie_captain_america_real_name">Steve Rogers</string>
    <string name="movie_captain_america_team">Avengers</string>
    <string name="movie_captain_america_first_appearance">1941</string>
    <string name="movie_captain_america_created_by">Joe Simon</string>
    <string name="movie_captain_america_publisher">Marvel Comics</string>
    <string name="movie_captain_america_bio">Steven Rogers was born in the Lower East Side of Manhattan, New York City, in 1925 to poor Irish immigrants, Sarah and Joseph Rogers.[54] Joseph died when Steve was a child, and Sarah died of pneumonia while Steve was a teen. By early 1940, before America\'s entry into World War II, Rogers is a tall, scrawny fine arts student specializing in illustration and a comic book writer and artist.</string>
    <string name="movie_iron_man_name">Iron Man</string>
    <string name="movie_iron_man_real_name">Tony Stark</string>
    <string name="movie_iron_man_team">Avengers</string>
    <string name="movie_iron_man_first_appearance">1963</string>
    <string name="movie_iron_man_created_by">Stan Lee</string>
    <string name="movie_iron_man_publisher">Marvel Comics</string>
    <string name="movie_iron_man_bio">Anthony Edward Stark, the son of wealthy industrialist and head of Stark Industries, Howard Stark, and Maria Stark. A boy genius, he enters MIT at the age of 15 to study electrical engineering and later receives master\'s degrees in electrical engineering and physics. After his parents are killed in a car accident, he inherits his father\'s company.</string>
    <string name="movie_wolverine_name">Wolverine</string>
    <string name="movie_wolverine_real_name">James Howlett</string>
    <string name="movie_wolverine_team">X-Men</string>
    <string name="movie_wolverine_first_appearance">1974</string>
    <string name="movie_wolverine_created_by">Len Wein</string>
    <string name="movie_wolverine_publisher">Marvel Comics</string>
    <string name="movie_wolverine_bio">"Wolverine was born James Howlett in northern Alberta, Canada, during the late 1880s, purportedly to rich farm owners John and Elizabeth Howlett,[27] though he is actually the illegitimate son of the Howletts' groundskeeper, Thomas Logan.[28] After Thomas is thrown off the Howletts' property for an attempted rape perpetrated by his other son, named simply Dog, he returns to the Howlett manor and kills John Howlett. In retaliation, young James kills Thomas with bone claws that emerge from the back of his hands, as his mutation manifests.[29] He flees with his childhood companion, Rose, and grows into manhood on a mining colony in the Yukon, adopting the name \\\"Logan\\\".[30] When Logan accidentally kills Rose with his claws, he flees the colony and lives in the wilderness among wolves,[31] until he is captured and placed in a circus.[32] Saul Creed, brother of Victor Creed, frees Logan, but after he betrays Logan and Clara Creed to Nathaniel Essex, Logan drowns Creed in Essex's potion.[33] Logan returns to civilization, residing with the Blackfoot people. Following the death of his Blackfoot lover, Silver Fox, at the hands of Victor Creed, now known as Sabretooth,[34] he is ushered into the Canadian military during World War I. Logan spends time in Madripoor before settling in Japan, where he marries Itsu and has a son, Daken. Logan is unaware of his son for many years."</string>
    <string name="movie_spiderman_name">Spiderman</string>
    <string name="movie_spiderman_real_name">Peter Parker</string>
    <string name="movie_spiderman_team">Avengers</string>
    <string name="movie_spiderman_first_appearance">1962</string>
    <string name="movie_spiderman_created_by">Stan Lee</string>
    <string name="movie_spiderman_publisher">Marvel Comics</string>
    <string name="movie_spiderman_bio">"In Forest Hills, Queens, New York,[43] Midtown High School student Peter Parker is a science-whiz orphan living with his Uncle Ben and Aunt May. As depicted in Amazing Fantasy #15 (Aug. 1962), he is bitten by a radioactive spider (erroneously classified as an insect in the panel) at a science exhibit and \\\"acquires the agility and proportionate strength of an arachnid\\\".[44] Along with super strength, Parker gains the ability to adhere to walls and ceilings. Through his native knack for science, he develops a gadget that lets him fire adhesive webbing of his own design through small, wrist-mounted barrels. Initially seeking to capitalize on his new abilities, Parker dons a costume and, as \\\"Spider-Man\\\", becomes a novelty television star. However, \\\"He blithely ignores the chance to stop a fleeing thief, [and] his indifference ironically catches up with him when the same criminal later robs and kills his Uncle Ben.\\\" Spider-Man tracks and subdues the killer and learns, in the story's next-to-last caption, \\\"With great power there must also come-great responsibility!\\\"[45]"</string>
    <string name="movie_thor_name">Thor</string>
    <string name="movie_thor_real_name">Thor Odinson</string>
    <string name="movie_thor_team">Avengers</string>
    <string name="movie_thor_first_appearance">1962</string>
    <string name="movie_thor_created_by">Stan Lee</string>
    <string name="movie_thor_publisher">Marvel Comics</string>
    <string name="log_in_email_hint_enter_email">Enter Email</string>
    <string name="log_in_password_hint_enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="mvp">Mvp</string>
    <string name="navigation_view">Navigation View</string>
    <string name="coordinator_with_scroll">Coordinator with Scroll</string>
    <string name="tab_bar">TabBar</string>
    <string name="text_fields">Text Fields</string>
    <string name="favourite">Favourite</string>
    <string name="nav_item_camera">Camera</string>
    <string name="nav_item_gallery">Gallery</string>
    <string name="nav_item_slideshow">Slideshow</string>
    <string name="nav_item_tools">Tools</string>
    <string name="nav_item_share">Share</string>
    <string name="nav_item_send">Send</string>
    <string name="add">Add</string>
    <string name="cart">Cart</string>
    <string name="frame">Frames</string>
    <string name="review">Review</string>
    <string name="communicate">Communicate</string>
</resources>