<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_baseline_photo_camera_24"
            android:title="@string/nav_item_camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_filter_frames_24"
            android:title="@string/nav_item_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_insert_photo_24"
            android:title="@string/nav_item_slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/nav_item_tools" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/nav_item_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_baseline_send_24"
                android:title="@string/nav_item_send" />
        </menu>
    </item>
</menu>