<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="8dp"
    tools:context=".activities.RelativeLayoutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/feedback_from_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/feedback_name_hint"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/feedback_email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <Spinner
            android:id="@+id/spFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/edit_text_border"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spFeedback"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/feedback_details_hint"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:padding="10dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etDetails"
            android:text="@string/feedback_checkbox" />

        <Button
            android:id="@+id/btnSendFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox"
            android:text="@string/feedback_send_btn"
            android:textAllCaps="false" />

    </RelativeLayout>

</ScrollView>